User register and login page

--- a/spring-boot-app/src/main/resources/application.properties
+++ b/spring-boot-app/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.mvc.view.suffix=.jsp
 #For detailed logging during development
 logging.level.org.springframework=TRACE
 logging.level.com=TRACE
+server.port=8081
+#server.contextPath=/user
+spring.application.name=Spring Boot Application
+security.basic.enabled=true
+security.user.name=sunaina
+security.user.password=123
