--- a/spring-boot-app/src/main/resources/application.properties
+++ b/spring-boot-app/src/main/resources/application.properties
@@ -4,8 +4,13 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=TRACE
 logging.level.com=TRACE
 server.port=8081
-#server.contextPath=/user
+server.contextPath=/user
 spring.application.name=Spring Boot Application
 security.basic.enabled=true
 security.user.name=sunaina
 security.user.password=123
+
+spring.datasource.url=jdbc:mysql://localhost/spring-boot-app
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
